--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,66 @@
 html {
   box-sizing: border-box;
+  font-family: Lato, sans-serif;
+  color: #333;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+h2 {
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p {
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2rem;
+  padding-bottom: 1em;
+}
+
+div {
+  display: inline-block;
+  text-align: left;
+  margin-top: 0;
+  max-width: 25em;
+  padding: 1em;
+  vertical-align: middle;
+}
+
+section {
+  background-color: #eee9de;
+  display: block;
+  text-align: center;
+  padding: 2em 0;
+}
+
+.btn {
+  background-color: #eee9de;
+  border: 4px solid #333;
+  border-radius: 5px;
+  margin: 1.5rem;
+  padding: .4em .75em .5em;
+  text-decoration: none;
+  color: #333;
+  margin-left: 0;
+}
+
+.btn:hover {
+  background-color: #666;
+  color: #fff;
+  border: 4px solid #666;
 }
